@startuml
skinparam classAttributeIconSize 0

class User {
  id
  name
  email
  phone
  document
  profileType
  verificationStatus
}

class Role {
  id
  name
}

class Address {
  id
  city
  state
  latitude
  longitude
}

class Category {
  id
  slug
  name
}

class Breed {
  id
  name
}

class AnimalListing {
  id
  title
  quantity
  averageWeight
  priceTotal
  status
  traceabilityScore
}

class AnimalImage {
  id
  url
  primaryImage
}

class TraceabilityGenetics {
  origin
  pedigree
  registryCode
}

class TraceabilityHealth {
  vaccinationStatus
  gtaStatus
}

class TraceabilityNutrition {
  feedProgram
  supplementation
}

class Proposal {
  id
  offeredAmount
  status
}

class Contract {
  id
  contractNumber
  status
}

class Order {
  id
  code
  totalAmount
  status
}

class Payment {
  id
  amount
  method
  status
}

class Carrier {
  id
  companyName
  licenseNumber
}

class LogisticsQuote {
  id
  originCity
  destinationCity
  price
  status
}

class Shipment {
  id
  status
  trackingCode
}

User "*" -- "*" Role
User "1" -- "*" Address
User "1" -- "*" AnimalListing
Category "1" -- "*" Breed
Category "1" -- "*" AnimalListing
Breed "0..1" -- "*" AnimalListing
AnimalListing "1" -- "*" AnimalImage
AnimalListing "1" -- "0..1" TraceabilityGenetics
AnimalListing "1" -- "0..1" TraceabilityHealth
AnimalListing "1" -- "0..1" TraceabilityNutrition
AnimalListing "1" -- "*" Proposal
Proposal "1" -- "0..1" Contract
Proposal "0..1" -- "0..1" Order
Order "1" -- "*" Payment
Carrier "1" -- "*" LogisticsQuote
AnimalListing "1" -- "*" LogisticsQuote
LogisticsQuote "0..1" -- "0..1" Shipment
Order "1" -- "0..1" Shipment

@enduml
